Fix arrow vertical align

--- a/src/kibi_plugins/siren_auto_join_vis/public/siren_auto_join_vis.less
+++ b/src/kibi_plugins/siren_auto_join_vis/public/siren_auto_join_vis.less
@@ -26,9 +26,14 @@
 
   .panel-buttons {
     a .panel-title {
+      position: relative;
+      font-size: 14px;
 
       .go-to-dashboard {
-        float: right;
+        position: absolute;
+        top: 50%;
+        margin-top: -10px;
+        right: 10px;
 
         i {
           font-size: 14px;
